--- a/sample/src/main/res/menu/menu.xml
+++ b/sample/src/main/res/menu/menu.xml
@@ -6,6 +6,10 @@
         android:title="@string/add"/>
 
     <item
+        android:id="@+id/delete"
+        android:title="@string/delete"/>
+
+    <item
         android:id="@+id/clear"
         android:title="@string/clear"/>
 
